Add local file reader for accessing test data